src/test/ui/destructuring-assignment/default-match-bindings-forbidden.stderr
error[E0308]: mismatched types
  --> $DIR/default-match-bindings-forbidden.rs:6:5
   |
LL |     (x, y) = &(1, 2);
   |     ^^^^^^   ------- this expression has type `&({integer}, {integer})`
   |     |
   |     expected reference, found tuple
   |
   = note: expected type `&({integer}, {integer})`
             found tuple `(_, _)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
